--- a/Taiko/env/default/js.properties
+++ b/Taiko/env/default/js.properties
@@ -4,7 +4,7 @@
 test_timeout = 20000
 
 # Change this to true to enable debugging support
-DEBUG = false
+DEBUG = true
 
 # Comma seperated list of dirs. path should be relative to project root.
 STEP_IMPL_DIR = tests
